@@ -4,6 +4,7 @@
 <title>:: SOTF :: Station Management</title>
 <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
 <link href="{$root}main.css" rel="stylesheet" type="text/css">
+<script language="JavaScript" src="{$root}scripts.js"></script>
 </head>
 
 <body background="{$root}img/bg1.gif" leftmargin="0" topmargin="0" marginwidth="0" marginheight="0">
