@@ -12,6 +12,7 @@ the page generation engine and the overall page frameork.
 Introduced a security patch, not allowing not logged in users to see whatever is on the internal
 pages.
 
+Added Java Script for popups and deletion confirmation.
 
 ************************************************************************************************
  08.11.2002
